--- a/content/web-accessibility-inclusive-design/index.mdx
+++ b/content/web-accessibility-inclusive-design/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Web Accessibility: Inclusive Design for All Users"
 description: "Embrace the principles of web accessibility and ensure that your web applications reach all users, regardless of their abilities."
-image: "../../public/blogs/About-Big.png"
+image: "../../public/blogs/lauren-mancke-aOC7TSLb1o8-unsplash.jpg"
 publishedAt: "2022-11-12"
 updatedAt: "2022-11-12"
 author: "codebucks"
